--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/tiagomatrixd/InstaTubeBotTelegram#readme",
   "dependencies": {
     "btch-downloader": "^2.8.4",
+    "dotenv": "^16.4.7",
     "telegraf": "^4.16.3"
   }
 }
